Set free_preview for chapter chapter1.Rmd

--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -1,6 +1,7 @@
 ---
 title: 'R Basics'
 description: 'In this course we introduce you to the basics of computing and analyzing data in the user-friendly and helpful R interface. This first chapter starts with the very basics of functions, objects to get us acquainted with the world of R.'
+free_preview: true
 ---
 
 ## Using variables 1
