--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -276,11 +276,11 @@ xp: 50
 skills: 1
 ```
 
-This is the end of the programming assignment for this section. 
+This is the end of the programming assignment for this section. Please DO NOT click through to additional assessments from this page. Please DO answer the question on this page. If you do click through, your scores may NOT be recorded.
+
+Click on "Awesome" to get the "points" for this question and then return to the course on edX.
 
 You can now close this window to go back to the <a href='https://www.edx.org/course/data-science-r-basics-2'>course</a>.
-
-WARNING: if you continue the assessments by clicking on the arrow to get the next exercise or by hitting Ctrl-K your assessments may NOT get scored.
 
 `@hint`
 - No hint necessary!
