--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -90,7 +90,7 @@ What is the sum of the first 1000 positive integers?
 We can use the formula $ n(n+1)/2 $ to quickly compute this quantity.
 
 `@instructions`
-- Use the same formula as the last exercise but substitute `n`
+- Use the same formula as the last exercise but change the value of `n`.
 - Instead of typing the result, use the formula and defined variable.
 
 `@hint`
