--- a/chapter4.Rmd
+++ b/chapter4.Rmd
@@ -527,7 +527,7 @@ We previously computed the average of `na_example` using `mean(na_example)` and 
 A common operation is therefore removing the entries that are NA and after that perform operations on the rest.
 
 `@instructions`
-Write one line of code to compute the average, but only for the entries that are not NA making use of the `!` operator before `ind`.
+Write one line of code to compute the average, but only for the entries that are not NA making use of the `!` operator before `ind`. (Remember that you can use `help("!")` to find out more about what `!` does.)
 
 `@hint`
 Remember the `!` operator. Note that `na_example[!ind]` returns the entries that are not NA.
