--- a/chapter5.Rmd
+++ b/chapter5.Rmd
@@ -185,9 +185,9 @@ mean(murder_rate)
 `@sct`
 ```{r}
 test_error()
-test_object("murder_rate", incorrect_msg = "")
-test_function("mean", incorrect_msg = "")
-test_output_contains("mean(murder_rate)",incorrect_msg = "Make sure to multiply the population by 100,000")
+test_object("murder_rate", incorrect_msg = "Your murder rate is incorrect. Make sure to multiply the result by 100,000.")
+test_function("mean", incorrect_msg = "Did you forget to take the mean of the murder rate?")
+test_output_contains("mean(murder_rate)",incorrect_msg = "Make sure to multiply the result by 100,000.")
 success_msg("Awesome!")
 ```
 
