--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -114,7 +114,7 @@ city <- c("Beijing", "Lagos", "Paris", "Rio de Janeiro", "San Juan", "Toronto")
 `@sct`
 ```{r}
 test_error()
-test_object("city", incorrect_msg = "Make sure to use the correct order.",undefined_msg = "Each of the city names need double quotes.")
+test_object("city", incorrect_msg = "Make sure to use the correct order and spelling.",undefined_msg = "Each of the city names need double quotes.")
 success_msg("Awesome! Now you've learnt to store both numeric and character vectors.")
 
 ```
