--- a/chapter7.Rmd
+++ b/chapter7.Rmd
@@ -552,7 +552,7 @@ skills: 1
 Now we will reset murders to the original table by using `data(murders)`.
 
 `@instructions`
-Use one line of code to create a new data frame, called `my_states`, that has murder rate and rank columns, considers only states in the Northeast or West which have a murder rate lower than 1, and contain only the state, rate, and rank columns. The line should have four components separated by three `%>%` operators: 
+Use one line of code to create a new data frame, called `my_states`, that has murder rate and rank columns, considers only states in the Northeast or West which have a murder rate lower than 1, and contain only the state, rate, and rank columns. The line should have four components separated by **three** `%>%` operators: 
 - The original dataset `murders`
 - A call to `mutate` to add the murder rate and the rank.
 - A call to `filter` to keep only the states from the Northeast or West and that have a murder rate below 1.
@@ -565,7 +565,8 @@ Columns in the final data frame MUST be in the order: `state`, `rate`, `rank`.
 The following pieces of code should be joined by pipes:
 - `mutate(rate =  total / population * 100000, rank = rank(-rate))`
 - `filter(region %in% c("Northeast", "West") & rate < 1)`
-- `select(state, rate, rank)`
+- `select(state, rate, rank
+Make sure you use 3 pipes.
 
 `@pre_exercise_code`
 ```{r}
